# zilla-tracker

./: .gitignore  README.md
Tools/: MakeIcon.swift  regenerate-tree-sitter-c.sh  regenerate-tree-sitter-cpp.sh  regenerate-tree-sitter-css.sh  regenerate-tree-sitter-html.sh  regenerate-tree-sitter-javascript.sh  regenerate-tree-sitter-json.sh  regenerate-tree-sitter-python.sh  regenerate-tree-sitter-remarkup.sh  regenerate-tree-sitter-rust.sh  regenerate-tree-sitter-swift.sh  regenerate-tree-sitter-typescript.sh
Tools/searchfox-bridge/: .gitignore  Cargo.toml  README.md
Tools/searchfox-bridge/src/: lib.rs
Zilla/: ActiveInlineComposer.swift  AuthStore.swift  BugCommentSheet.swift  BugDetailView.swift  BugDraft.swift  BugOrderEntry.swift  BugzillaSettingsView.swift  ChangesetContentLoader.swift  ChangesetSynthesizer.swift  ChangesetView.swift  CommentMarkdown.swift  ComponentPickerSheet.swift  ComponentReleaseBoardView.swift  ComponentReleaseColumnBoardView.swift  ContentView.swift  DraftEditorView.swift  FolioActivityIntegration.swift  FollowedItems.swift  FontScale.swift  Gravatar.swift  InlineCommentMapping.swift  InlineComposerHost.swift  InlineComposerSheet.swift  InlineComposerView.swift  InlineDraftBuffer.swift  InlineThreadSheet.swift  InlineThreadView.swift  InspectorSectionHeader.swift  Item.swift  Keychain.swift  LinkInsertSheet.swift  MarkdownEditor.swift  MentionCompletions.swift  MenuCommands.swift  MetaBugPickerSheet.swift  MozillaLinkRouting.swift  Pasteboard.swift  PhabricatorAuthStore.swift  ProjectPickerSheet.swift  (+27 more)
Zilla.xcodeproj/: project.pbxproj
(+11 files in other folders)
