[package]
name = "searchfox_bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "searchfox_bridge"
crate-type = ["staticlib", "lib"]

[dependencies]
searchfox-lib = "0.10.11"
uniffi = { version = "0.31", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
once_cell = "1"
thiserror = "1"
